<package format="2">
  <name>snmp_diag</name>
  <version>0.0.0</version>
  <description>
     Publishes SNMP data to diagnostics
  </description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  <author>Roland Arsenault</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>diagnostic_msgs</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
